# controller/coba.go
@@ -18,14 +18,6 @@ import (
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
-// GetAllPresensi godoc
-// @Summary Get All Data Presensi.
-// @Description Mengambil semua data presensi.
-// @Tags Presensi
-// @Accept json
-// @Produce json
-// @Success 200 {object} Presensi
-// @Router /presensi [get]
 func Home(c *fiber.Ctx) error {
  	return c.Status(fiber.StatusOK).JSON(fiber.Map{
  		"github_repo": "https://github.com/stefanymelda/stefanyapp",
@@ -160,11 +152,31 @@ func InsertDataSurvey(c *fiber.Ctx) error {
 	})
 }
 
+// GetAllPresensi godoc
+// @Summary Get All Data Presensi.
+// @Description Mengambil semua data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Success 200 {object} Presensi
+// @Router /presensi [get]
 func GetAllPresensi(c *fiber.Ctx) error {
 	ps := inimodullatihan.GetAllPresensi(config.Ulbimongoconn, "presensi")
 	return c.JSON(ps)
 }
 
+// GetPresensiID godoc
+// @Summary Get By ID Data Presensi.
+// @Description Ambil per ID data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /presensi/{id} [get]
 func GetPresensiID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
